-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8, 9
-
Component/s: hotspot
-
b72
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8135551 | emb-9 | Vladimir Kozlov | P2 | Resolved | Fixed | team |
| JDK-8230223 | openjdk8u232 | Vladimir Kozlov | P2 | Resolved | Fixed | b05 |
| JDK-8229174 | 8u241 | David Buck | P2 | Resolved | Fixed | b01 |
| JDK-8230821 | 8u231 | David Buck | P2 | Closed | Fixed | b10 |
| JDK-8229412 | 8u221 | David Buck | P2 | Closed | Fixed | b35 |
| JDK-8234993 | emb-8u241 | David Buck | P2 | Resolved | Fixed | team |
| JDK-8231525 | emb-8u231 | David Buck | P2 | Resolved | Fixed | b10 |
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (C:\jprt\T\P1\224926.amurillo\s\hotspot\src\share\vm\asm/codeBuffer.hpp:176), pid=23724, tid=0x000000000000a4b4
# assert(allocates2(pc)) failed: not in CodeBuffer memory: 0x0000009c16026b60 <= 0x0000009c1602c151 <= 0x0000009c1602c150
#
# JRE version: (9.0) (build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-20150507224926.amurillo.jdk9-hs-2015-05--b00 compiled mode windows-amd64 compressed oops)
# Core dump will be written. C:\local\aurora\sandbox\results\workDir\closed\com\oracle\jfr\gc\DetailedEventTest\TestEvacuationFailedEvent\hs_err_pid23724.mdmp
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x0000009c13ff2800): JavaThread "Unknown thread" [_thread_in_vm, id=42164, stack(0x0000009c15b00000,0x0000009c15c00000)]
Stack: [0x0000009c15b00000,0x0000009c15c00000]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
0000009c`15bfea50 00000000`5459b067 jvm!os::abort+0x17f [c:\jprt\t\p1\224926.amurillo\s\hotspot\src\os\windows\vm\os_windows.cpp @ 1082]
0000009c`15bfead0 00000000`5458b831 jvm!VMError::report_and_die+0x927 [c:\jprt\t\p1\224926.amurillo\s\hotspot\src\share\vm\utilities\vmerror.cpp @ 1111]
0000009c`15bfed70 00000000`5423dea3 jvm!report_vm_error+0x71 [c:\jprt\t\p1\224926.amurillo\s\hotspot\src\share\vm\utilities\debug.cpp @ 217]
0000009c`15bfee20 00000000`545da266 jvm!CodeSection::set_end+0x73 [c:\jprt\t\p1\224926.amurillo\s\hotspot\src\share\vm\asm\codebuffer.hpp @ 176]
0000009c`15bfef80 00000000`545e177b jvm!Assembler::emit_operand+0x186 [c:\jprt\t\p1\224926.amurillo\s\hotspot\src\cpu\x86\vm\assembler_x86.cpp @ 298]
0000009c`15bff000 00000000`5463fd25 jvm!Assembler::movl+0x12b [c:\jprt\t\p1\224926.amurillo\s\hotspot\src\cpu\x86\vm\assembler_x86.cpp @ 1826]
0000009c`15bff0d0 00000000`54640e43 jvm!MacroAssembler::multiply_128_x_128_loop+0x345 [c:\jprt\t\p1\224926.amurillo\s\hotspot\src\cpu\x86\vm\macroassembler_x86.cpp @ 7445]
0000009c`15bff2a0 00000000`54671f21 jvm!MacroAssembler::multiply_to_len+0x6d3 [c:\jprt\t\p1\224926.amurillo\s\hotspot\src\cpu\x86\vm\macroassembler_x86.cpp @ 7716]
0000009c`15bff4a0 00000000`54665b54 jvm!StubGenerator::generate_multiplyToLen+0x241 [c:\jprt\t\p1\224926.amurillo\s\hotspot\src\cpu\x86\vm\stubgenerator_x86_64.cpp @ 3762]
0000009c`15bff600 00000000`54661ffc jvm!StubGenerator::generate_all+0x544 [c:\jprt\t\p1\224926.amurillo\s\hotspot\src\cpu\x86\vm\stubgenerator_x86_64.cpp @ 4013]
0000009c`15bff6e0 00000000`54538d4b jvm!StubGenerator_generate+0x3c [c:\jprt\t\p1\224926.amurillo\s\hotspot\src\cpu\x86\vm\stubgenerator_x86_64.cpp @ 4029]
0000009c`15bff740 00000000`544fc74a jvm!StubRoutines::initialize2+0x17b [c:\jprt\t\p1\224926.amurillo\s\hotspot\src\share\vm\runtime\stubroutines.cpp @ 258]
0000009c`15bffb30 00000000`5454436f jvm!init_globals+0xfa [c:\jprt\t\p1\224926.amurillo\s\hotspot\src\share\vm\runtime\init.cpp @ 144]
0000009c`15bffba0 00000000`544246c7 jvm!Threads::create_vm+0x1cf [c:\jprt\t\p1\224926.amurillo\s\hotspot\src\share\vm\runtime\thread.cpp @ 3380]
0000009c`15bffcf0 00000000`5442777f jvm!JNI_CreateJavaVM_inner+0xd7 [c:\jprt\t\p1\224926.amurillo\s\hotspot\src\share\vm\prims\jni.cpp @ 3984]
0000009c`15bffdd0 000007f7`3f2d2310 jvm!JNI_CreateJavaVM+0x1f [c:\jprt\t\p1\224926.amurillo\s\hotspot\src\share\vm\prims\jni.cpp @ 4056]
- backported by
-
JDK-8135551 assert(allocates2(pc)) failed: not in CodeBuffer memory
-
- Resolved
-
-
JDK-8229174 assert(allocates2(pc)) failed: not in CodeBuffer memory
-
- Resolved
-
-
JDK-8230223 assert(allocates2(pc)) failed: not in CodeBuffer memory
-
- Resolved
-
-
JDK-8231525 assert(allocates2(pc)) failed: not in CodeBuffer memory
-
- Resolved
-
-
JDK-8234993 assert(allocates2(pc)) failed: not in CodeBuffer memory
-
- Resolved
-
-
JDK-8229412 assert(allocates2(pc)) failed: not in CodeBuffer memory
-
- Closed
-
-
JDK-8230821 assert(allocates2(pc)) failed: not in CodeBuffer memory
-
- Closed
-
- relates to
-
JDK-8055494 Add C2 x86 intrinsic for BigInteger::multiplyToLen() method
-
- Resolved
-
-
JDK-8073108 Use x86 and SPARC CPU instructions for GHASH acceleration
-
- Resolved
-
-
JDK-8079156 32 bit Java 9-fastdebug hit assertion in client mode with StackShadowPages flag value from 32 to 50
-
- Closed
-
-
JDK-8131167 Make CodeBuffer dynamically grow/shrink as needed without having to provide a guess of how much space we need in advance
-
- Open
-