8080157: assert(allocates2(pc)) failed: not in CodeBuffer memory

Increase code_size2 for stubs

Reviewed-by: iveresov